--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,44 +6,21 @@
   },
   "extends": "eslint:recommended",
   "parserOptions": {
-    "ecmaVersion": 2018
+    "ecmaVersion": 2020
+  },
+  "globals": {
+    "BigInt": true
   },
   "rules": {
-    "indent": [
-      "error",
-      2
-    ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ],
-    "no-console": "off",
-    "no-loop-func": [
-      "error"
-    ],
-    "block-spacing": [
-      "error",
-      "always"
-    ],
-    "camelcase": [
-      "error"
-    ],
-    "eqeqeq": [
-      "error",
-      "always"
-    ],
-    "strict": [
-      "error",
-      "global"
-    ],
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "no-loop-func": ["error"],
+    "block-spacing": ["error", "always"],
+    "camelcase": ["error"],
+    "eqeqeq": ["error", "always"],
+    "strict": ["error", "global"],
     "brace-style": [
       "error",
       "1tbs",
@@ -51,10 +28,7 @@
         "allowSingleLine": true
       }
     ],
-    "comma-style": [
-      "error",
-      "last"
-    ],
+    "comma-style": ["error", "last"],
     "comma-spacing": [
       "error",
       {
@@ -62,13 +36,8 @@
         "after": true
       }
     ],
-    "eol-last": [
-      "error"
-    ],
-    "func-call-spacing": [
-      "error",
-      "never"
-    ],
+    "eol-last": ["error"],
+    "func-call-spacing": ["error", "never"],
     "key-spacing": [
       "error",
       {
@@ -110,30 +79,14 @@
         "properties": true
       }
     ],
-    "new-parens": [
-      "error"
-    ],
-    "no-trailing-spaces": [
-      "error"
-    ],
-    "no-unneeded-ternary": [
-      "error"
-    ],
-    "no-whitespace-before-property": [
-      "error"
-    ],
-    "object-curly-spacing": [
-      "error",
-      "always"
-    ],
-    "operator-assignment": [
-      "error",
-      "always"
-    ],
-    "operator-linebreak": [
-      "error",
-      "after"
-    ],
+    "new-parens": ["error"],
+    "no-lonely-if": ["error"],
+    "no-trailing-spaces": ["error"],
+    "no-unneeded-ternary": ["error"],
+    "no-whitespace-before-property": ["error"],
+    "object-curly-spacing": ["error", "always"],
+    "operator-assignment": ["error", "always"],
+    "operator-linebreak": ["error", "after"],
     "semi-spacing": [
       "error",
       {
@@ -141,25 +94,17 @@
         "after": true
       }
     ],
-    "space-before-blocks": [
-      "error",
-      "always"
-    ],
+    "space-before-blocks": ["error", "always"],
     "space-before-function-paren": [
       "error",
       {
-        "anonymous": "always",
+        "anonymous": "never",
         "named": "never",
         "asyncArrow": "always"
       }
     ],
-    "space-in-parens": [
-      "error",
-      "never"
-    ],
-    "space-infix-ops": [
-      "error"
-    ],
+    "space-in-parens": ["error", "never"],
+    "space-infix-ops": ["error"],
     "space-unary-ops": [
       "error",
       {
@@ -170,94 +115,45 @@
         }
       }
     ],
-    "no-unreachable": [
-      "error"
-    ],
-    "no-global-assign": [
-      "error"
-    ],
-    "no-self-compare": [
-      "error"
-    ],
-    "no-unmodified-loop-condition": [
-      "error"
-    ],
+    "no-unreachable": ["error"],
+    "no-global-assign": ["error"],
+    "no-self-compare": ["error"],
+    "no-unmodified-loop-condition": ["error"],
     "no-constant-condition": [
       "error",
       {
         "checkLoops": false
       }
     ],
-    "no-console": [
-      "off"
-    ],
-    "no-useless-concat": [
-      "error"
-    ],
-    "no-useless-escape": [
-      "error"
-    ],
-    "no-shadow-restricted-names": [
-      "error"
-    ],
+    "no-console": ["off"],
+    "no-useless-concat": ["error"],
+    "no-useless-escape": ["error"],
+    "no-shadow-restricted-names": ["error"],
     "no-use-before-define": [
       "error",
       {
         "functions": false
       }
     ],
-    "arrow-parens": [
-      "error",
-      "as-needed"
-    ],
-    "arrow-body-style": [
-      "error",
-      "as-needed"
-    ],
-    "arrow-spacing": [
-      "error"
-    ],
+    "arrow-parens": ["error", "as-needed"],
+    "arrow-body-style": ["error", "as-needed"],
+    "arrow-spacing": ["error"],
     "no-confusing-arrow": [
       "error",
       {
         "allowParens": true
       }
     ],
-    "no-useless-computed-key": [
-      "error"
-    ],
-    "no-useless-rename": [
-      "error"
-    ],
-    "no-var": [
-      "error"
-    ],
-    "object-shorthand": [
-      "error",
-      "always"
-    ],
-    "prefer-arrow-callback": [
-      "error"
-    ],
-    "prefer-const": [
-      "error"
-    ],
-    "prefer-numeric-literals": [
-      "error"
-    ],
-    "prefer-rest-params": [
-      "error"
-    ],
-    "prefer-spread": [
-      "error"
-    ],
-    "rest-spread-spacing": [
-      "error",
-      "never"
-    ],
-    "template-curly-spacing": [
-      "error",
-      "never"
-    ]
+    "no-useless-computed-key": ["error"],
+    "no-useless-rename": ["error"],
+    "no-var": ["error"],
+    "object-shorthand": ["error", "always"],
+    "prefer-arrow-callback": ["error"],
+    "prefer-const": ["error"],
+    "prefer-numeric-literals": ["error"],
+    "prefer-rest-params": ["error"],
+    "prefer-spread": ["error"],
+    "rest-spread-spacing": ["error", "never"],
+    "template-curly-spacing": ["error", "never"]
   }
 }
